<resources>
    <string name="app_name">Freexi</string>
    <string name="button_home">Home</string>
    <string name="button_search">Search</string>
    <string name="button_work">Work</string>
    <string name="button_account">Account</string>
    <string name="account_settings">account_settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings_label">Account settings</string>
    <string name="account_name_placeholder">Name</string>
    <string name="account_email_placeholder">E-mail</string>
    <string name="account_image_placeholder">Profile Picture</string>
    <string name="account_personal_detail">Personal information</string>
    <string name="account_personal_password">Change password</string>
    <string name="logout">Log out</string>
    <string name="profile_picture">Profile picture</string>
    <string name="account_name">Your Full Name</string>
    <string name="account_email">Your E-mail</string>
    <string name="account_ballance">Your Ballance</string>
    <string name="account_phone">Your Phone Number</string>
    <string name="account_description">User Description</string>
    <string name="account_order_label">Offers</string>
    <string name="account_myorder_label">My Offers</string>
    <string name="account_buyorder_label">Bought Offers</string>
    <string name="account_create_offer">Create Offer</string>
    <string name="account_wallet_label">Wallet</string>
    <string name="account_wallet_label2">Current Balance</string>
    <string name="rating">Rating</string>
    <string name="rating_from">User rated</string>
    <string name="registration">Registration</string>
    <string name="register_all_input">Please, Fill in all information</string>
    <string name="email">E-mail</string>
    <string name="name">Your name</string>
    <string name="password">Password</string>
    <string name="register_upplow">Password must contain Lower and Upper case letter</string>
    <string name="register_num">Password must contain a number</string>
    <string name="register_length">Password must contain at least 8 letters</string>
    <string name="go_back">Go back</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_date">Your Birth Date</string>
    <string name="select_pic">Select Picture</string>
    <string name="register">Register</string>
    <string name="wallet_transaction">Transaction</string>
    <string name="wallet_from">From :</string>
    <string name="wallet_to">To :</string>
    <string name="wallet_ball">Amount :</string>
    <string name="about_seller">About the Seller</string>
    <string name="seller">Seller</string>
    <string name="seller_with">Seller :</string>
    <string name="price">Price</string>
    <string name="price_with">Price :</string>
    <string name="about_me">About me</string>
    <string name="from">From :</string>
    <string name="joined">Joined</string>
    <string name="joined_at">Joined at :</string>
    <string name="detailInformation">Detail Information</string>
    <string name="review">Reviews</string>
    <string name="offers">Offers</string>
    <string name="report_offer">Report Offer</string>
    <string name="report_user">Report User</string>
    <string name="user_offer">User Offers</string>
    <string name="user_review">User Reviews</string>
    <string name="user_country">User Country</string>
    <string name="created_at">Created at</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_with">Standard delivery :</string>
    <string name="order_you">You are about to order :</string>
    <string name="offer_name">Offer title</string>
    <string name="about_order">Please write your requirements :</string>
    <string name="write_here">Write here</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="awaitingC">Awaiting confirmation</string>
    <string name="awaiting">Awaiting</string>
    <string name="in_progress">In Progress</string>
    <string name="customer_requirements">Customer requirements</string>
    <string name="customer">Customer</string>
    <string name="customer_with">Customer :</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="chats">Chats</string>
    <string name="chat_allow">Chat room will open after you open communication</string>
    <string name="retry_conn">Retry connecting</string>
    <string name="offer_description">Offer Description</string>
    <string name="delivery_d">Delivered Orders</string>
    <string name="scroll_offer_manage">Offer Values</string>
    <string name="offer_information">Quick information about offer</string>
    <string name="save">Save</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="chat_room">Chat Room</string>
    <string name="chat_roomy">Your Chat Room</string>
    <string name="user">User</string>
    <string name="message_here">Write your message here</string>
    <string name="send_button">Send button</string>
    <string name="attach_image">Attach image</string>
    <string name="incoming_message">Incoming Message</string>
    <string name="send_message">Sent Message</string>
    <string name="sent_image">Sent image</string>
    <string name="contact_user">Contact User</string>
    <string name="order_title">Order Title</string>
    <string name="await_deliver">Awaiting Delivery</string>
    <string name="pass_deliver">Past Delivery Date</string>
    <string name="delivery_date">Delivery Date :</string>
    <string name="no_active_orders">No Awaiting Orders</string>
    <string name="orders">Orders</string>
    <string name="delete_order">Delete</string>
    <string name="file">File</string>
    <string name="delivered_text">Delivered Items</string>
    <string name="deliveries">Orders</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_on">Delivered on :</string>
    <string name="upload_files">Upload files</string>
    <string name="rate_offer">Rate Offer</string>
    <string name="send_review">Submit review</string>
    <string name="no_deliver_item">No Delivered Orders</string>
    <string name="no_chat">No chats opened</string>
    <string name="no_chat_below">You can open chat by going to user profile and clicking button</string>
    <string name="no_delivery">No Delivered orders</string>
    <string name="no_delivery_below">Here you will be able to see your delivered order</string>
    <string name="no_offers">No Offers to manage</string>
    <string name="no_offers_below">You have to create the offers before managing them</string>
    <string name="admin_button">Admin Properties</string>
    <string name="admin_offer">Edit Offers</string>
    <string name="admin_profile">Edit User Profile</string>
    <string name="admin_order">Edit Orders</string>
    <string name="admin_delete">Delete User</string>
    <string name="admin_review">Edit Reviews</string>
    <string name="title">Title</string>
    <string name="notification_text">Notification text</string>
    <string name="notification">Notifications</string>
    <string name="date">Date</string>
    <string name="admin_user_find">Enter username</string>
    <string name="user_delete">User account not found</string>
    <string name="user_delete_under">User account is deleted or banned. You will not be able to see any offers or receive messages from this user</string>
    <string name="return_text">Return</string>
    <string name="transaction">Transaction</string>
    <string name="reports">Reports</string>
    <string name="reported">Reported :</string>
    <string name="reporter">Reported by :</string>
    <string name="placeholder">Placeholder</string>
    <string name="reason">Reason :</string>
    <string name="reviewer">Reviewer</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews</string>
    <string name="message_report">Report Message :</string>
    <string name="name_with">Name : </string>
    <string name="report">Report</string>
    <string name="dismiss">Dismiss</string>
    <string name="actions">Actions</string>
    <string name="edit">Edit</string>
    <string name="order_date_with">Order date :</string>
    <string name="manage_offer">Manage Offers</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="manage_users">Manage Users</string>
    <string name="load_more">Load More</string>
    <string name="delete_not">Delete notifications</string>
    <string name="no_not">No Notifications</string>
    <string name="not_text">Notifications will be displayed after you receive some</string>
    <string name="not_problem">If you are not seeing any notifications, please change the power plan of this app</string>
    <string name="ordere_on">Order date :</string>
    <string name="delete_acc">Delete Account</string>
    <string name="forgot_pass">Forgot your password ?</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_under">See whats new</string>
    <string name="no_search_offers">No offers found</string>
    <string name="no_search_offers_bottom">Try modifying you search</string>
    <string name="admin_offer_find">Enter offer name</string>
    <string name="admin_offer_edit">Edit offer</string>
    <string name="admin_offer_delete">Delete offer</string>
    <string name="our_policies">App Policies</string>
    <string name="privacy">Privacy</string>
    <string name="data_storage">Data storage</string>
    <string name="data_collection">Data collection</string>
    <string name="data_collection_text">Freexi is only collecting informations that you enter in, such as your E-mail address, phone number, your name, country, profile picture, offer images and delivered files. Your data will never be shared with a 3-th party and will not be used for advertising. If you wish to delete all of your files, please contact our staff.</string>
    <string name="privacy_text">All of your private informations (E-mail, password, phone number) that your enter will not be available to normal users. You can change </string>
    <string name="restrictions">Restrictions</string>
    <string name="restrictions_text">Your profile picture and Offer images cannot be NSFW. Your name, user and offer descriptions, offer title cannot contain swear words or any offencive words. If these restrictions are violated, the administrator will adjust your data so that it does not conflict with ours policies</string>
    <string name="policies_accept">I have read Freexi policy and accept them</string>
    <string name="daily_bonus">Daily bonus</string>
    <string name="no_offer_user">This user currently does not have any offers</string>
    <string name="contact_support">Contact Support</string>
    <string name="support">Support</string>
    <string name="contact_form">Contact form</string>
    <string name="tell_us_wrong">Please, tell us what you need help with</string>
    <string name="sent">Sent</string>
    <string name="support_policy">I understand that I will only receive answer thought in app Messages</string>
    <string name="submitted_by">Submitted by :</string>
    <string name="admin_order_search">Select search modifier</string>
    <string name="admin_order_offer">Search by offer name</string>
    <string name="admin_order_seller">Search by seller name</string>
    <string name="admin_order_customer">Search by customer name</string>
    <string name="admin_order_decline">Decline order</string>
    <string name="admin_order_delete">Delete order</string>
    <string name="admin_search_order">Enter order title</string>
    <string name="admin_order_id">Order ID :</string>
    <string name="order_status">Order status :</string>
    <string name="seller_acc">Seller account</string>
</resources>